--- a/p1-5-structure-4.ipynb
+++ b/p1-5-structure-4.ipynb
@@ -47,11 +47,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "11\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "primes = [2,3,5,7,11]\n",
+    "for prime in primes:\n",
+    "    print(prime)"
    ]
   },
   {
@@ -86,11 +100,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "list(range(4))"
    ]
   },
   {
@@ -104,29 +129,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "list(range(1,5))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 6, 7]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "list(range(1,8,1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 4, 7]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "list(range(1,8,3))"
    ]
   },
   {
@@ -138,11 +196,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "B\n",
+      "M\n",
+      "W\n",
+      " \n",
+      "M\n",
+      "4\n",
+      " \n",
+      "o\n",
+      "r\n",
+      " \n",
+      "L\n",
+      "e\n",
+      "x\n",
+      "u\n",
+      "s\n",
+      " \n",
+      "L\n",
+      "C\n",
+      "5\n",
+      "0\n",
+      "0\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "s=\"BMW M4 or Lexus LC500\"\n",
+    "for i in s:\n",
+    "    print(i)"
    ]
   },
   {
@@ -168,11 +256,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "loop end\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "count=0\n",
+    "while count < 5:\n",
+    "    print(count)\n",
+    "    count += 1\n",
+    "    \n",
+    "print('loop end')"
    ]
   },
   {
@@ -211,11 +317,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "for i in range(10):\n",
+    "    if i%2==0:\n",
+    "        continue\n",
+    "    print(i) # print odd number"
    ]
   },
   {
@@ -227,11 +336,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 is Odd\n",
+      "4 is Even\n",
+      "5 is Odd\n",
+      "loop ends\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "from random import randrange\n",
+    "while True:\n",
+    "    n = randrange(-3,7)\n",
+    "    if n <= 0:\n",
+    "        break\n",
+    "    elif n % 2==0:\n",
+    "        print(n,'is Even')\n",
+    "    else:\n",
+    "        print(n, 'is Odd')\n",
+    "print('loop ends')"
    ]
   },
   {
