--- a/p1-6-structure-5.ipynb
+++ b/p1-6-structure-5.ipynb
@@ -78,11 +78,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "input a number please: i\n",
+      "that is not a number\n",
+      "input a number please: i\n",
+      "that is not a number\n",
+      "input a number please: ad\n",
+      "that is not a number\n",
+      "input a number please: -0.9\n",
+      "that is not a number\n",
+      "input a number please: 4\n",
+      "4\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "while True:\n",
+    "    try:                                              # ----------------------------------**********, try has :\n",
+    "        x = int(input(\"input a integer please: \"))\n",
+    "        break\n",
+    "    except ValueError:                                # ----------------------------------*********, except has :\n",
+    "        print(\"that is not a integer\")\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "input a integer please: y\n",
+      "that is not a integer\n",
+      "it is finally\n",
+      "input a integer please: 6\n",
+      "it is finally\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "while True:\n",
+    "    try:                                              \n",
+    "        x = int(input(\"input a integer please: \"))\n",
+    "        break\n",
+    "    except ValueError:                                \n",
+    "        print(\"that is not a integer\")\n",
+    "    finally:                    # ----------------------------------********* whatever happens finally will run\n",
+    "        print('it is finally')\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "give a number: 4\n",
+      "4\n",
+      "give a number: 5\n",
+      "5\n",
+      "give a number: t\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: 't'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-bcd67e63b6df>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mwhile\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0my\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'give a number: '\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: 't'"
+     ]
+    }
+   ],
+   "source": [
+    "while True:\n",
+    "    y=int(input('give a number: '))\n",
+    "    print(y)"
    ]
   },
   {
@@ -96,11 +183,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "handling runtime error:  division by zero\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "def this_fail():\n",
+    "    a=1/0\n",
+    "    \n",
+    "try:\n",
+    "    this_fail()\n",
+    "except ZeroDivisionError as errormessage:               #-----------------------------------------之前不知道可以这么用\n",
+    "    print('handling runtime error: ', errormessage)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ZeroDivisionError",
+     "evalue": "division by zero",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-023a503edd86>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ma\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mZeroDivisionError\u001b[0m: division by zero"
+     ]
+    }
+   ],
+   "source": [
+    "a=1/0"
    ]
   },
   {
