--- a/p1-9-oo-3.ipynb
+++ b/p1-9-oo-3.ipynb
@@ -30,12 +30,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "class Dog:\n",
+    "    kind = ''\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "    def bark(self):\n",
+    "        return 'Woo Woo'    #-----------------------------use return in function to return what you need\n",
+    "        \n",
+    "a = Dog(\"Fido\")\n",
+    "b = Dog('Mike')\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -63,47 +78,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Fido'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "a.name"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "Dog.kind = 'OOOXXX'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'OOOXXX'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "b.kind"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Woo Woo'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "a.bark()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'OOOXXX'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "a.kind"
    ]
   },
   {
@@ -134,38 +193,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "class Cat:\n",
+    "    kind = 'Amrican'\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "    def mew(self):\n",
+    "        return 'meow meow'\n",
+    "    \n",
+    "a=Cat('Kate')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Amrican'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "a.kind"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Kate'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "a.name"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'meow meow'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "a.mew()"
    ]
   },
   {
@@ -191,11 +290,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "class Animal:\n",
+    "    kind = ''\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "    def voice(self):\n",
+    "        return \"...\""
    ]
   },
   {
@@ -209,11 +313,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "class Dog(Animal):\n",
+    "    kind = 'nanping'\n",
+    "    def voice(self):\n",
+    "        return \"woo woo\"\n",
+    "    waw = voice\n"
    ]
   },
   {
@@ -225,11 +333,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "class Cat(Animal):\n",
+    "    kind = 'XXOO'\n",
+    "    def voice(self):\n",
+    "        return \"meow meow\"\n",
+    "    mew = voice\n",
+    "\n"
    ]
   },
   {
@@ -241,20 +354,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "g = Animal('Jack')\n",
+    "h = Dog('Jason')\n",
+    "j = Cat('Catty')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 86,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jack : ...\n",
+      "Jason : woo woo\n",
+      "Catty : meow meow\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "for animal in [g,h,j]:\n",
+    "    print(animal.name,':',animal.voice())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'woo woo'"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "h.voice()   #-------------------------------------------for method, if you miss (), it show wield info"
    ]
   },
   {
