--- a/p1-a-string.ipynb
+++ b/p1-a-string.ipynb
@@ -98,38 +98,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30721"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "ord('码')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'码'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "chr(30721)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'砂'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "chr(30722)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "砂\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "print('\\u7802')"
    ]
   },
   {
@@ -160,47 +201,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ther is a \"a pig\"'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "'ther is a \"a pig\"'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\" she is Mike's gf\""
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "\" she is Mike's gf\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\" sdsd ljsdf' '  '\""
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "\" sdsd ljsdf' ' \"\" '\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' sdfdsfadf\\nsdfasdf\\nafdadsf'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "''' sdfdsfadf\n",
+    "sdfasdf\n",
+    "afdadsf'''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'mulitple line is \\n not special'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "'mulitple line is \\n not special'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ljasfd \\rladddd'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'ljasfd \\rladddd'"
    ]
   },
   {
@@ -252,11 +370,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A win is72% B win is 12% the left is-83%\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "x = 72\n",
+    "y= 12\n",
+    "print('A win is' + str(x)+ '%' + ' B win is ' + str(y) + '%' + ' the left is' + str(1-x-y) + '%')"
    ]
   },
   {
@@ -268,11 +396,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 29,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A win is 72%, B win is 12%, the rest is -83%, and {x} and {72}\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "x=72\n",
+    "y-12\n",
+    "print(f'A win is {x}%, B win is {y}%, the rest is {1-x-y}%, and {{x}} and {{{x}}}')"
    ]
   },
   {
@@ -302,29 +442,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "hello = 'hello'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "world = 'world'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello world !\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "hw = hello + ' ' + world + ' !'\n",
+    "print(hw)"
    ]
   },
   {
@@ -342,38 +491,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "len(hw)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello world !'"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "hw.capitalize()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'HELLO WORLD !'"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "hw.upper()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'HELLO WORLD !'"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "hw.upper().lower().upper()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'       hello world !'"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hw.rjust(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'        hello world !         '"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hw.center(30)"
    ]
   },
   {
@@ -390,29 +623,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "hw.isalpha()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "hw.islower()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "'43'.isdigit()"
    ]
   },
   {
@@ -430,75 +696,202 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "'we' in hw"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "'py' in 'Python'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "hw.find('ll')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "hw.find('  ')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "hw.index(' w')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "hw.rindex('d')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "substring not found",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-58-61ec0895e19d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mhw\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'  '\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m: substring not found"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "hw.index('  ')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'heLLo worLd !'"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "hw.replace('l','L')\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'heLlo world !'"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hw.replace('l', 'L',1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'hhello world !ehello world !lhello world !lhello world !ohello world ! hello world !whello world !ohello world !rhello world !lhello world !dhello world ! hello world !!'"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -548,92 +941,191 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "import string"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'abcdefghijklmnopqrstuvwxyz'"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "string.ascii_lowercase"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ABCDEFGHIJKLMNOPQRSTUVWXYZ'"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "string.ascii_uppercase"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ'"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "string.ascii_letters"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0123456789'"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "string.digits"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0123456789abcdefABCDEF'"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "string.hexdigits"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 81,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'01234567'"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "string.octdigits"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 82,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'!\"#$%&\\'()*+,-./:;<=>?@[\\\\]^_`{|}~'"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "string.punctuation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' \\t\\n\\r\\x0b\\x0c'"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "string.whitespace"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ!\"#$%&\\'()*+,-./:;<=>?@[\\\\]^_`{|}~ \\t\\n\\r\\x0b\\x0c'"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "string.printable"
    ]
   },
   {
