--- a/p1-b-final.ipynb
+++ b/p1-b-final.ipynb
@@ -87,11 +87,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "what is your name\n",
+      "Yi Zou\n",
+      "hello Yi Zou\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "print('what is your name')\n",
+    "s=input('')\n",
+    "print(f'hello {s}')"
    ]
   },
   {
@@ -191,11 +203,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "import time\n",
+    "\n",
+    "class Bot:\n",
+    "    wait = 1\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        self.q = ''\n",
+    "        self.a = ''\n",
+    "        \n",
+    "    def _think(self, s):\n",
+    "        return s\n",
+    "    \n",
+    "    def run(self):\n",
+    "        time.sleep = self.wait\n",
+    "        print(self.q)\n",
+    "        self.a = input()\n",
+    "        time.sleep = self.wait\n",
+    "        print(self._think(self.a))\n",
+    "        "
    ]
   },
   {
@@ -214,29 +244,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "class HelloBot(Bot):\n",
+    "    def __init__(self):\n",
+    "        self.q = 'hello, what is your name?'\n",
+    "        \n",
+    "        \n",
+    "    def _think(self, s):\n",
+    "        return f'hi, {s}'\n",
+    "    \n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello, what is your name?\n",
+      "Frank\n",
+      "hi, Frank\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "test2=HelloBot()\n",
+    "test2.run()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "import random\n",
+    "\n",
+    "class ColorBot(Bot):\n",
+    "    def __init__(self):\n",
+    "        self.q = 'what is your favorate color? Red, yellow, blue or black'\n",
+    "        \n",
+    "        \n",
+    "    def _think(self, s):\n",
+    "        color = ['red', 'blue', 'black', 'white']\n",
+    "        mycolor = random.choice(color)\n",
+    "        return f'oh you like {s.upper()}, my favorate color is {mycolor}'\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "what is your favorate color? Red, yellow, blue or black\n",
+      "red\n",
+      "oh you like RED, my favorate color is white\n"
+     ]
+    }
+   ],
+   "source": [
+    "test=ColorBot()\n",
+    "test.run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class GreetingBot(Bot):\n",
+    "    def __init__(self):\n",
+    "        self.q = 'how are you?'\n",
+    "        \n",
+    "    def _think(self, s):\n",
+    "        if 'good' in s.lower():\n",
+    "            return f'I am good too'\n",
+    "        elif 'bad' in s.lower():\n",
+    "            return f'sorry to hear that'\n",
+    "        else:\n",
+    "            return f'OK'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "how are you?\n",
+      "ok\n",
+      "OK\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = GreetingBot()\n",
+    "x.run()"
    ]
   },
   {
@@ -252,11 +371,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "class Mysiri():\n",
+    "    \n",
+    "    def __init__(self, wait = 1):\n",
+    "        Bot.wait = wait\n",
+    "        self.bots = []\n",
+    "        \n",
+    "    def add(self,s):\n",
+    "        robx = s\n",
+    "        self.bots.append(robx)\n",
+    "        \n",
+    "    def _promp(self, s):\n",
+    "        print(s)\n",
+    "        \n",
+    "    def run(self):\n",
+    "        self._promp(\"this is Mysiri, let's have a talk\")\n",
+    "        for i in self.bots:\n",
+    "            \n",
+    "            i.run()\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test2 = Mysiri()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test2.add(HelloBot())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test2.add(GreetingBot())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test2.add(ColorBot())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<__main__.HelloBot at 0x108002cd0>,\n",
+       " <__main__.GreetingBot at 0x108044c90>,\n",
+       " <__main__.ColorBot at 0x107fe3950>]"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test2.bots"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this is Mysiri, let's have a talk\n",
+      "hello, what is your name?\n",
+      "Tutu\n",
+      "hi, Tutu\n",
+      "how are you?\n",
+      "I am good\n",
+      "I am good too\n",
+      "what is your favorate color? Red, yellow, blue or black\n",
+      "Yellow\n",
+      "oh you like YELLOW, my favorate color is red\n"
+     ]
+    }
+   ],
+   "source": [
+    "test2.run()"
    ]
   },
   {
@@ -320,11 +541,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "from time import sleep\n",
+    "from termcolor import colored\n",
+    "\n",
+    "class Bot:\n",
+    "    \n",
+    "    wait = 1\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        self.q = ''\n",
+    "        self.a = ''\n",
+    "        \n",
+    "    def _think(self, s):\n",
+    "        return s\n",
+    "    \n",
+    "    def _format(self, s):\n",
+    "        return colored(s, 'blue')\n",
+    "    \n",
+    "    def run(self):\n",
+    "        sleep(Bot.wait)\n",
+    "        print(self._format(self.q))\n",
+    "        self.a = input()\n",
+    "        sleep(Bot.wait)\n",
+    "        print(self._format(self._think(self.a)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test3 = Mysiri()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test3.add(HelloBot())\n",
+    "test3.add(GreetingBot())\n",
+    "test3.add(ColorBot())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this is Mysiri, let's have a talk\n",
+      "\u001b[34mhello, what is your name?\u001b[0m\n",
+      "Yi\n",
+      "\u001b[34mhi, Yi\u001b[0m\n",
+      "\u001b[34mhow are you?\u001b[0m\n",
+      "I am good\n",
+      "\u001b[34mI am good too\u001b[0m\n",
+      "\u001b[34mwhat is your favorate color? Red, yellow, blue or black\u001b[0m\n",
+      "I like red\n",
+      "\u001b[34moh you like I LIKE RED, my favorate color is red\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "test3.run()"
    ]
   },
   {
@@ -352,11 +641,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "from simpleeval import simple_eval\n",
+    "\n",
+    "class CalcBot(Bot):\n",
+    "    def __init__(self):\n",
+    "        self.q = \" Through recent upgrade I can do calcuation now. Input some arithmethic expression to try: \"\n",
+    "        \n",
+    "    def _think(self, s):\n",
+    "        result = simple_eval(s)\n",
+    "        return f'Done. Resutls = {result}'\n",
+    "\n",
+    "    "
    ]
   },
   {
@@ -368,11 +667,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "test4 = Mysiri()\n",
+    "test4.add(CalcBot())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this is Mysiri, let's have a talk\n",
+      "\u001b[34m Through recent upgrade I can do calcuation now. Input some arithmethic expression to try: \u001b[0m\n",
+      "17-9\n",
+      "\u001b[34mDone. Resutls = 8\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "test4.run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Homework\n",
+    "from simpleeval import simple_eval\n",
+    "\n",
+    "class CalcBot2(Bot):\n",
+    "    def __init__(self):\n",
+    "        self.q = \" Through recent upgrade I can do calcuation now. Input some arithmethic expression to try: \"\n",
+    "        \n",
+    "    def _think(self, s):\n",
+    "        result = simple_eval(s)\n",
+    "        return f'Done. Resutls = {result}. Do you want to try more?'\n",
+    "    \n",
+    "    def run(self):\n",
+    "        sleep(Bot.wait)\n",
+    "        print(self._format(self.q))\n",
+    "        while True:\n",
+    "            self.a = input()\n",
+    "            sleep(Bot.wait)\n",
+    "            if 'x q' in self.a or 'exit' in self.a or 'quit'in self.a:\n",
+    "                break\n",
+    "            else:\n",
+    "                print(self._format(self._think(self.a)))\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test5 = Mysiri()\n",
+    "test5.add(CalcBot2())\n",
+    "test5.add(ColorBot())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this is Mysiri, let's have a talk\n",
+      "\u001b[34m Through recent upgrade I can do calcuation now. Input some arithmethic expression to try: \u001b[0m\n",
+      "0*8+19\n",
+      "\u001b[34mDone. Resutls = 19. Do you want to try more?\u001b[0m\n",
+      "exit\n",
+      "\u001b[34mwhat is your favorate color? Red, yellow, blue or black\u001b[0m\n",
+      "red\n",
+      "\u001b[34moh you like RED, my favorate color is black\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "test5.run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'I want to quit' in ['q', 'x', 'quit', 'exit']   \n",
+    "# see, that is why I do not use this format, even through my format is complicated"
    ]
   },
   {
@@ -489,7 +897,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "from time import sleep\n",
+    "from termcolor import colored\n",
+    "\n",
+    "class Bot:\n",
+    "    \n",
+    "    wait = 1\n",
+    "    \n",
+    "    def __init__(self, runtype = 'once'):\n",
+    "        self.q = ''\n",
+    "        self.a = ''\n",
+    "        self.runtype = runtype\n",
+    "        \n",
+    "    def _think(self, s):\n",
+    "        return s\n",
+    "    \n",
+    "    def _format(self, s):\n",
+    "        return colored(s, 'blue')\n",
+    "    \n",
+    "    def run_once(self):\n",
+    "        sleep(Bot.wait)\n",
+    "        print(self._format(self.q))\n",
+    "        self.a = input()\n",
+    "        sleep(Bot.wait)\n",
+    "        print(self._format(self._think(self.a)))\n",
+    "        \n",
+    "        \n",
+    "    def run_loop(self):\n",
+    "        sleep(Bot.wait)\n",
+    "        print(self._format(self.q))\n",
+    "        while True:\n",
+    "            self.a = input()\n",
+    "            sleep(Bot.wait)\n",
+    "            if self.a in ['q', 'x', 'quit', 'exit']:\n",
+    "                break\n",
+    "            else:\n",
+    "                print(self._format(self._think(self.a)))\n",
+    "        \n",
+    "        \n",
+    "    def run(self):\n",
+    "        if self.runtype == \"once\":\n",
+    "            self.run_once()\n",
+    "        elif self.runtype == \"Loop\":\n",
+    "            self.run_loop()"
    ]
   },
   {
